searchbars no funcionales listas

--- a/dashboard/react-intro/public/index.html
+++ b/dashboard/react-intro/public/index.html
@@ -16,6 +16,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;500;600;900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/b12fa36c29.js" crossorigin="anonymous"></script>
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
